# ai-tiktok-growth-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  project_state.md  pyproject.toml  requirements.txt  session_log.md  tiktok_ai_analytics_mvp_blueprint.md  whats_next.md
dashboard/: app.py
data/: rl_state.json  video_watch_matrix.json
docs/: CREDENTIALS_SETUP.md
exports/: DAHDMe96N3M_p47.txt  rl_post_2026-03-19.txt
scripts/: cleanup_appledouble.sh  oauth_callback_server.py  run_daily.py  setup_db.py  setup_wizard.py  tiktok_cli.py
sql/: schema.sql
src/tiktok_ai_analytics/: auth.py  canva_auth.py  canva_client.py  cli.py  config.py  content_engine.py  db.py  env_store.py  kpis.py  recommendations.py  reinforcement.py  tiktok_poster.py  video_processor.py
src/tiktok_ai_analytics/etl/: __init__.py  pipeline.py  tiktok_client.py
tests/: test_env_store.py  test_kpis.py
