[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-ai-analytics"
version = "0.1.0"
description = "MVP analytics system for TikTok content growth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pandas>=2.2.3",
  "scikit-learn>=1.5.2",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.2",
]

[project.scripts]
tiktok-cli = "tiktok_ai_analytics.cli:main"
tiktok-setup-db = "tiktok_ai_analytics.cli:setup_db"
tiktok-run-daily = "tiktok_ai_analytics.cli:run_daily"

[tool.setuptools.packages.find]
where = ["src"]
